# HRMS

./: .env.example  .gitignore  README.md  docker-compose.dev.yml  docker-compose.yml  insert_admin.py  test_imports.py
backend/: Dockerfile  alembic.ini  pyproject.toml  pyrightconfig.json  seed_data.py
backend/alembic/: env.py
backend/src/: __init__.py  main.py
backend/src/agents/: __init__.py  attendance_agent.py  base.py  compliance_agent.py  leave_agent.py  orchestrator.py  payroll_agent.py  performance_agent.py  recruitment_agent.py
backend/src/attendance/: __init__.py  models.py  repository.py  router.py  schemas.py  service.py
backend/src/auth/: models.py  repository.py  router.py  schemas.py  service.py
backend/src/compliance/: __init__.py  models.py  router.py
backend/src/core/: base_model.py  config.py  database.py  dependencies.py  exceptions.py  middleware.py  security.py
backend/src/dashboard/: router.py
backend/src/employees/: __init__.py  models.py  repository.py  router.py  schemas.py  service.py
backend/src/leaves/: __init__.py  models.py  repository.py  router.py  schemas.py  service.py
backend/src/payroll/: __init__.py  models.py  repository.py  router.py  schemas.py  service.py
backend/src/performance/: __init__.py  models.py  repository.py  router.py  schemas.py
backend/src/rag/: __init__.py  chatbot.py  vector_store.py
backend/src/recruitment/: __init__.py  models.py  repository.py  router.py  schemas.py  service.py
backend/src/scripts/: seed_data.py
backend/src/training/: models.py  router.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/(dashboard)/: layout.tsx
frontend/src/components/: providers.tsx
frontend/src/components/shared/: header.tsx  sidebar.tsx
frontend/src/lib/: api.ts  utils.ts
frontend/src/stores/: auth-store.ts
n8n-workflows/: workflow_templates.json
(+13 files in other folders)
