[project]
name = "hrms-backend"
version = "1.0.0"
description = "Autonomous HR Copilot — Enterprise AI-Powered HRMS Backend"
requires-python = ">=3.12"
dependencies = [
    # ── Web Framework ────────────────────────────────────────
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.12",
    
    # ── Database ─────────────────────────────────────────────
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    
    # ── Cache & Queue ────────────────────────────────────────
    "redis>=5.2.0",
    
    # ── Authentication ───────────────────────────────────────
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt==3.2.2",
    
    # ── Validation & Settings ────────────────────────────────
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "email-validator>=2.2.0",
    
    # ── HTTP & Email ─────────────────────────────────────────
    "httpx>=0.28.0",
    "aiosmtplib>=3.0.0",
    "jinja2>=3.1.4",
    
    # ── File Processing ──────────────────────────────────────
    "python-docx>=1.1.2",
    "PyPDF2>=3.0.1",
    "Pillow>=11.0.0",
    "openpyxl>=3.1.5",
    
    # ── Utilities ────────────────────────────────────────────
    "python-dateutil>=2.9.0",
    "pytz>=2024.2",
    "uuid6>=2024.7.10",
    "slowapi>=0.1.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.28.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
